package com.inf5153.api.daos;

import com.inf5153.api.models.Document;

import org.springframework.stereotype.Service;

@Service
public class DocumentDAO extends AbstractDAO<Document,Integer>{

}
